--- a/angularProjectG00343745/index.html
+++ b/angularProjectG00343745/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>AngularProjectG00343745</title>
-  <base href="https://ultan-kearns.github.io/AngularProject/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.6252c7b24f8f94a1ec4e.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.1830021e03d1c0db3030.js"></script><script type="text/javascript" src="main.59576967fb1537524912.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
